<resources>
    <string name="app_name">SmartSurvelliance</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="default_notification_channel_id">DefaultNotificationChannelId</string>
    <string name="title_full_screen">Full Screen</string>
    <string name="title_live_feed">Live Feed</string>
    <string name="title_support">Support</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_faqs">Faqs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_settings">Settings</string>
    <string name="title_video_stream">Video Stream</string>
    <string name="ss_search_title">Search</string>
    <string name="welcome_message">Welcome to Smart  Surveillance System</string>
    <string name="others_title">Others</string>
    <string name="paystack_text">Card, Bank Account, Bank Transfer, USSD Visa</string>
    <string name="paystack_title">Paystack</string>
    <string name="credit_card_text">Credit, Debit, Master</string>
    <string name="card_title">Bank Card</string>
    <string name="mode_ofp_title">Select a Mode of Payment</string>

    <string-array name="titles">
        <item>Notify You of Intruders</item>
        <item>Stream From Camera</item>
        <item>Attach names to visitors</item>
    </string-array>

    <string-array name="descriptions">
        <item>Get notified of intruders who get close to your store or home</item>
        <item>Watch live streams from camera in front on store</item>
        <item>Attach names to visitors you know</item>
    </string-array>

</resources>