<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.production.smartsurvelliance.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/ss_home_fragment" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.production.smartsurvelliance.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/ss_dashboard_fragment" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.production.smartsurvelliance.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/ss_notifications_fragment" />
    <fragment
        android:id="@+id/nav_fullscreen"
        android:name="com.production.smartsurvelliance.ui.home.FullscreenFragment"
        android:label="@string/title_full_screen"
        tools:layout="@layout/ss_fullscreen_fragment" />
    <fragment
        android:id="@+id/nav_live_feed"
        android:name="com.production.smartsurvelliance.ViewLiveFeedFragment"
        android:label="@string/title_live_feed"
        tools:layout="@layout/ss_view_live_feed_fragment" />
    <fragment
        android:id="@+id/nav_customer_support"
        android:name="com.production.smartsurvelliance.ui.support.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/ss_support_fragment" />
    <fragment
        android:id="@+id/nav_subscriptions"
        android:name="com.production.smartsurvelliance.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/ss_subscriptions_fragment" />
    <fragment
        android:id="@+id/nav_faqs"
        android:name="com.production.smartsurvelliance.ui.faqs.FaqsFragment"
        android:label="@string/title_faqs"
        tools:layout="@layout/ss_faqs_fragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.production.smartsurvelliance.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/ss_settings_fragment" />
</navigation>